--- a/src/app.css
+++ b/src/app.css
@@ -1,1 +1,4 @@
-/* to do */
+@import url('https://fonts.googleapis.com/css2?family=Chango&family=Dosis:wght@600&display=swap');
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
