--- a/src/app.css
+++ b/src/app.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Chango&family=Dosis:wght@600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Berkshire+Swash&family=Montserrat:ital,wght@0,300;0,600;1,300;1,600&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
